--- a/LiveMapDashboard.Web/LiveMapDashboard.Web.csproj
+++ b/LiveMapDashboard.Web/LiveMapDashboard.Web.csproj
@@ -13,4 +13,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LiveMap.Application\LiveMap.Application.csproj" />
+    <ProjectReference Include="..\LiveMap.Domain\LiveMap.Domain.csproj" />
+    <ProjectReference Include="..\LiveMap.Persistence\LiveMap.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
