--- a/LiveMap.Persistence/LiveMap.Persistence.csproj
+++ b/LiveMap.Persistence/LiveMap.Persistence.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\LiveMap.Domain\LiveMap.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
