--- a/LiveMapDashboard.Web/Dockerfile
+++ b/LiveMapDashboard.Web/Dockerfile
@@ -7,28 +7,29 @@ WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
+
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
-COPY ["LiveMap.Api/LiveMap.Api.csproj", "LiveMap.Api/"]
+COPY ["LiveMapDashboard.Web/LiveMapDashboard.Web.csproj", "LiveMapDashboard.Web/"]
 COPY ["LiveMap.Application/LiveMap.Application.csproj", "LiveMap.Application/"]
 COPY ["LiveMap.Domain/LiveMap.Domain.csproj", "LiveMap.Domain/"]
 COPY ["LiveMap.Persistence/LiveMap.Persistence.csproj", "LiveMap.Persistence/"]
 
-RUN dotnet restore "./LiveMap.Api/LiveMap.Api.csproj"
+RUN dotnet restore "./LiveMapDashboard.Web/LiveMapDashboard.Web.csproj"
 COPY . .
-WORKDIR "/src/LiveMap.Api"
-RUN dotnet build "./LiveMap.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/LiveMapDashboard.Web"
+RUN dotnet build "./LiveMapDashboard.Web.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./LiveMap.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./LiveMapDashboard.Web.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "LiveMap.Api.dll"]
+ENTRYPOINT ["dotnet", "LiveMapDashboard.Web.dll"]
