--- a/LiveMapDashboard.Web/appsettings.json
+++ b/LiveMapDashboard.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BackendConfiguration": {
+    "Url": "http://localhost:5006",
+    "Api": "/api"
+  }
 }
