--- a/LiveMapDashboard.Web/appsettings.json
+++ b/LiveMapDashboard.Web/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "BackendConfiguration": {
     "Url": "http://localhost:5006",
-    "Api": "/api"
+    "Api": "api"
   }
 }
