--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.userosscache
 *.sln.docstates
 .idea
+LiveMapDashboard.Web/wwwroot/css/styles.css
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
