--- a/LiveMapDashboard.Web/LiveMapDashboard.Web.csproj
+++ b/LiveMapDashboard.Web/LiveMapDashboard.Web.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\LiveMap.Application\LiveMap.Application.csproj" />
     <ProjectReference Include="..\LiveMap.Domain\LiveMap.Domain.csproj" />
+    <ProjectReference Include="..\LiveMap.Infrastructure\LiveMap.Infrastructure.csproj" />
     <ProjectReference Include="..\LiveMap.Persistence\LiveMap.Persistence.csproj" />
   </ItemGroup>
 
