--- a/.github/workflows/ci-roslyn_analyzers.yml
+++ b/.github/workflows/ci-roslyn_analyzers.yml
@@ -2,9 +2,9 @@ name: Roslyn Analyzers
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
 
 jobs:
   analyze:
