--- a/.github/workflows/ci-tailwind.yml
+++ b/.github/workflows/ci-tailwind.yml
@@ -12,6 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 9.0.x
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
