--- a/.github/workflows/ci-tests_coverage.yml
+++ b/.github/workflows/ci-tests_coverage.yml
@@ -11,13 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 9.0.x  # Adjust to your project’s version
+          dotnet-version: 9.0.x
 
       - name: Restore
         run: dotnet restore
