Fix roslyn analyzer and add separate tests for Unit tests and tailwind (#46)
* fix: add 2 new ci's and fix roslyn errors

* Fix tailwind css and mapper extension

* tweak pipeline asp versions

* fix: roslyn warnings after main merge

* fix: update readme with proper tags and structure explanation

* feat: Stroke Roslyn so he no more angry

---------

Co-authored-by: ThomasRuijters <83541740+ThomasRuijters@users.noreply.github.com>

--- a/LiveMapDashboard.Web/LiveMapDashboard.Web.csproj
+++ b/LiveMapDashboard.Web/LiveMapDashboard.Web.csproj
@@ -31,11 +31,7 @@
     <ProjectReference Include="..\LiveMap.Persistence\LiveMap.Persistence.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Content Remove="wwwroot\js\park-place-markers-maplibre.js" />
-  </ItemGroup>
-
-  <Target Name="BuildTailwind" BeforeTargets="Build">
+  <Target Name="BuildTailwind" BeforeTargets="Build" Condition="'$(BuildingInsideVisualStudio)' == 'true' Or '$(RunTailwind)' == 'true'">
     <Exec Command="npm run build:css" />
   </Target>
 </Project>
