--- a/.github/workflows/ci-roslyn_analyzers.yml
+++ b/.github/workflows/ci-roslyn_analyzers.yml
@@ -2,22 +2,20 @@ name: Roslyn Analyzers
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
 
 jobs:
   analyze:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
       - name: Setup .NET
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 9.0.x  # Adjust to your project’s version
+          dotnet-version: 9.0.x
 
       - name: Restore dependencies
         run: dotnet restore
