feat: add computed value to category and modernize delete modals

--- a/LiveMapDashboard.Web/LiveMapDashboard.Web.csproj
+++ b/LiveMapDashboard.Web/LiveMapDashboard.Web.csproj
@@ -31,6 +31,10 @@
     <ProjectReference Include="..\LiveMap.Persistence\LiveMap.Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Include="Views\Shared\Layouts\_DeleteModalLayout.cshtml" />
+  </ItemGroup>
+
   <Target Name="BuildTailwind" BeforeTargets="Build">
     <Exec Command="npm run build:css" />
   </Target>
