feat: Add docker compose file to pass variables.

--- a/LiveMap.Api/Dockerfile
+++ b/LiveMap.Api/Dockerfile
@@ -31,4 +31,7 @@ RUN dotnet publish "./LiveMap.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publis
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+# ENV DATABASE_CON="Server=host.docker.internal;Initial Catalog=LiveMap;User Id=sa;Password=355959;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;"
+
 ENTRYPOINT ["dotnet", "LiveMap.Api.dll"]
