--- a/LiveMap.Api/appsettings.json
+++ b/LiveMap.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=host.docker.internal;Initial Catalog=LiveMap;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //"DefaultConnection": "Server=host.docker.internal;Initial Catalog=LiveMap;User Id=sa;Password=355959;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=LiveMap;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
