--- a/LiveMap.ImageServer/LiveMap.ImageServer.csproj
+++ b/LiveMap.ImageServer/LiveMap.ImageServer.csproj
@@ -16,4 +16,10 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LiveMap.Application\LiveMap.Application.csproj" />
+    <ProjectReference Include="..\LiveMap.Domain\LiveMap.Domain.csproj" />
+    <ProjectReference Include="..\LiveMap.Persistence\LiveMap.Persistence.csproj" />
+  </ItemGroup>
+
 </Project>
