feat(api): base code

--- a/LiveMapDashboard.Web/appsettings.json
+++ b/LiveMapDashboard.Web/appsettings.json
@@ -9,5 +9,8 @@
   "BackendConfiguration": {
     "Url": "http://localhost:5006",
     "Api": "api"
+  },
+  "ImageConfiguration": {
+    "Url": "http://localhost:5007"
   }
 }
