--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,36 @@ services:
       context: .
       dockerfile: LiveMap.Api/Dockerfile
     ports:
-      - "5000:8080"
+      - "5006:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - DATABASE_CON=Server=sql;Initial Catalog=LiveMap;User Id=sa;Password=SomeStrongPw2201755#!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;
     depends_on:
       - sql
+
+  web:
+    image: livemap-web
+    build:
+      context: .
+      dockerfile: LiveMapDashboard.Web/Dockerfile
+    ports:
+      - "5115:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - API_URL=http://api:8080
+      - IMAGESERVER_URL=http://imageserver:8080
+    depends_on:
+      - api
+   
+  imageserver:
+    image: livemap-imageserver
+    build:
+      context: .
+      dockerfile: LiveMap.ImageServer/Dockerfile
+    ports:
+      - "5007:8080"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
 
   sql:
     image: mcr.microsoft.com/mssql/server:2022-latest
@@ -20,4 +44,4 @@ services:
       SA_PASSWORD: "SomeStrongPw2201755#!"
       ACCEPT_EULA: "Y"
     ports:
-      - "1433:1433"
+      - "1433:1433"    
