--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
       - "5115:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - API_URL=http://api:8080
-      - IMAGESERVER_URL=http://imageserver:8080
+      - BACKEND_URL=http://api:8080
+      - IMAGE_SERVER_URL=http://imageserver:8080
     depends_on:
       - api
    
