fix: Add public facing URL so images will always have a URL that points to valid location. Remove some of the magic that was done to build the URL, it did not have to be that complex.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - BACKEND_URL=http://api:8080
-      - IMAGE_SERVER_URL=http://localhost:5007
+      - IMAGE_SERVER_URL=http://imageserver:8080
     depends_on:
       - api
 
@@ -38,6 +38,7 @@ services:
       - "5007:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ImageService__PublicFacingUrl=http://localhost:5007
     volumes:
       - ./LiveMapDashboard.ImageServer/wwwroot:/app/wwwroot
 
