--- a/LiveMap.ImageServer/appsettings.json
+++ b/LiveMap.ImageServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ImageService": {
+    "PublicFacingUrl": "http://localhost:5007"
+  }
 }
